# ardupilot-project

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DRONE_SWARM_README.md  DRONE_SWARM_UNIQUE_MODELS_README.md  MULTI_DRONE_README.md  QGC_MULTI_DRONE_README.md  README.md  package.xml  setup_permissions.sh
config/: amcl_params.yaml  base_local_planner.yaml  base_local_planner_params.yaml  costmap_params.yaml  local_planner_params.yaml  pluginlists.yaml  recovery_behaviors.yaml
launch/: basic_nav.launch  debug_navigation.launch  direct_control.launch  drone_navigation.launch  drone_swarm.launch  fix_navigation.launch  fix_position.launch  fix_transforms.launch  fixed_navigation.launch  gazebo_demo.launch  gazebo_simple.launch  improved_nav.launch  multi_drone.launch  multi_drone_qgc.launch  obstacle_avoidance.launch  simple_multi_drone_demo.launch  simple_nav.launch  slam.launch  test_arm_takeoff.launch
maps/: empty_map.pgm  empty_map.yaml  my_map (1).pgm:Zone.Identifier  my_map (1).yaml:Zone.Identifier  my_map.pgm  my_map.yaml
models/: cylinder.sdf
rviz/: basic_nav.rviz  drone_direct_control.rviz  drone_navigation.rviz  navigation.rviz
scripts/: arm_takeoff.py  arm_takeoff_manual.py  base_to_lidar.py  coordinate_sync.py  create_drone_models.py  create_empty_map.py  create_simple_drone_models.py  create_unique_drone_models.py  debug_costmap.py  debug_costmap_position.py  drone_swarm_controller.py  fix_config.py  fix_costmap_params.py  fix_costmap_position.py  fix_drone_models.py  fix_global_origin.py  fix_goal_positions.py  fix_line_endings.py  fix_map.py  (+30 more)
(+2 files in other folders)
